--- a/ambiente/semillero-hbt/semillero-padre/semillero-servicios/pom.xml
+++ b/ambiente/semillero-hbt/semillero-padre/semillero-servicios/pom.xml
@@ -15,6 +15,10 @@
 
 	<name>Semillero HBT [REST]</name>
 
+	<properties>
+			<maven.test.skip>false</maven.test.skip>
+	</properties>
+
 	<build>
 		<resources>
 			<resource>
@@ -62,5 +66,20 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.9.4</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+		<dependency>
+		    <groupId>org.testng</groupId>
+		    <artifactId>testng</artifactId>
+		    <version>7.0.0</version>
+		    <scope>test</scope>
+		</dependency>
+		<!-- Dependencia para el manejo de la persistencia -->
+
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+		  <version>5.2.12.Final</version>
+		</dependency>
+		
 	</dependencies>
 </project>
